[wheel]
universal = 1

[metadata]
name = oasis-data-manager
version = attr: oasis_data_manager.__version__
description-file = README.md
license = BSD-3-Clause
license_files = LICENSE

[tool:pytest]
exclude = .tox,.git,docs,.ropeproject
python_classes =
addopts = --cov=converter --cov-report=term-missing --mypy

[flake8]
exclude = .tox,.git,docs,.ropeproject,.hypothesis
max-line-length = 150
ignore = E501,E402

#[isort]
#profile = black

[coverage:run]
branch = true

[coverage:report]
show_missing = true
